issue of overflow behaviour of content in main-content solve and addition of reponsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+label {
+  color: var(--text-color);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 1.3125rem */
+  letter-spacing: 0.00438rem;
+}
+
 .user__auth {
   width: 45rem;
   flex-shrink: 0;
@@ -291,4 +300,32 @@ th:first-child {
 th:last-child {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
+}
+
+.form--header h2 {
+  color: var(--text-color);
+  font-size: 1.75rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%; /* 2.625rem */
+  letter-spacing: 0.00875rem;
+}
+
+.form--header p span {
+  font-size: 0.75rem;
+  color: #989fab;
+}
+
+.form--header p {
+  display: flex;
+  align-items: center;
+  font-size: 0.75rem;
+  gap: 0.25rem;
+}
+
+.form__circle {
+  height: 0.375rem;
+  width: 0.375rem;
+  margin-right: 0.25rem;
+  color: #0caf60;
 }
